@@ -1,5 +1,11 @@
 2015-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/utility.c (FormatSize): Add 'i' to value range
+	identifiers since these are all in units of 2^10 rather than 1000.
+
+	* magick/pixel_cache.c (CheckImagePixelLimits): Fix typo and
+	produce an informative error message.
+
 	* magick/resource.c: Added support for Image width and height
 	pixels resource limits.
 
